--- a/docs/report/report.tex
+++ b/docs/report/report.tex
@@ -1,61 +1,39 @@
-\documentclass[12pt, a4paper, twoside]{article}
+\documentclass[12pt, letterpaper, twoside]{article}
 
 \usepackage{fontspec}
-\usepackage{blindtext}
-\usepackage{geometry}
-\usepackage{setspace}
-\usepackage{titlesec}
-\usepackage{indentfirst}
-
-% FIXME swap to calibri on windows? no license for linux
+%swap to calibri on windows? no license for linux
 \setmainfont{Carlito}
-\titlespacing*{\section}{0px}{3mm}{1mm}
-\titlespacing*{\subsection}{0px}{3mm}{1mm}
-\geometry{
-  left=2cm,
-  right=2cm,
-  top=2cm,
-  bottom=2cm
-}
-\setlength{\parindent}{10mm}
+
+\usepackage[left=2cm,
+            right=2cm,
+            top=2cm,
+            bottom=2cm]{geometry}
+\usepackage{setspace}
 
 \begin{document}
-
 \begin{center}
-  \huge Titolo \\
-  \large Francesco Platini mat. Matteo Bonacini mat.\\
-  Data
+    \huge Titolo \\
+    \vspace{0.5cm}
+    \large Francesco Platini mat. Matteo Bonacini mat.\\
+    \vspace*{1pt}
+    Data
+
 \end{center}
+\singlespacing
 
-% Title spacing
-
-\section{Abstract}\label{sec:abstract}
-  \blindtext[1]
-
-\section{Introduzione}\label{sec:introduzione}
-  \blindtext[2]
-
-\section{Apparato sperimentale e svolgimento}\label{sec:apparato-sperimentale-e-svolgimento}
-  \subsection{Apparato sperimentale}\label{subsec:apparato-sperimentale}
-    \blindtext[1]
-  \subsection{Svolgimento}\label{subsec:svolgimento}
-    \blindtext[1]
-
-\section{Risultati e discussione}\label{sec:risultati-e-discussione}
-  \blindtext[2]
-
-\section{Conclusioni}\label{sec:conclusioni}
-  \blindtext[1]
-
-\newpage
-\section{Appendice}
-  \subsection{Calcolo errore 1}
-    \blindtext[1]
-  \subsection{Calcolo errore 2}
-    \blindtext[1]
-
-\end{document}
-
+\section{Abstract}
+This is a simple paragraph at the beginning of the document. A brief introduction to the main subject.
+\section{Introduzione}
+Introduzione
+\section{Apparato sperimentale}
+Apparato sperimentale
+\section{Risultati e discussione}
+Risultati
+\section{Conclusioni}
+conclusioni
 %In this document somasdmeters
 %were added. There is an encoding package,
 %and pagesize and fontsize parameters.
+
+
+\end{document}
