--- a/docs/report/report.tex
+++ b/docs/report/report.tex
@@ -9,6 +9,8 @@
 \usepackage{graphicx}
 \usepackage[italian]{babel}
 \usepackage{catchfile}
+\usepackage{multicol}
+\usepackage{amsmath}
 
 % FIXME swap to calibri on windows? no license for linux
 \setmainfont{Carlito}
@@ -147,10 +149,13 @@
 
 
 \section{Risultati e discussione}\label{sec:risultati-e-discussione}
-  \blindtext[2]
+  \subsection{Verifica delle leggi di Fresnel}\label{subsec:leggi-di-fresnel}
+    \blindtext[2]
+  \subsection{Misura dell'angolo di Brewster}\label{subsec:angolo-di-brewster}
+    \blindtext[2]
 
 \section{Conclusioni}\label{sec:conclusioni}
-  \blindtext[1]
+  \blindtext[2]
 
 \newpage
 \section{Appendice}\label{sec:appendice}
@@ -160,56 +165,106 @@
     $V_{cc}$ dell'alimentatore.
     Dato che il segnale $V_{cc}$ può essere soggetto a fluttuazioni significative % todo precisa che le fluttuazioni avvengono in tempi maggiori a quelli del ciclo di clock di arduino
     (dell'ordine del ~10\%), abbiamo utilizzato il potenziale di riferimento
-    $V_{ref}$ di \emph{Arduino} come strumento di calibrazione.
-    La formula utilizzata per ottenere una misura $I_i$ (che abbiamo riportato con le
-    incertezze già calcolate) è:
+    $V_{ref}$ di \emph{Arduino}, mantenuto costante a $1.1V$, come strumento di
+    calibrazione.
+    Sappiamo che per ogni misurazione l'\emph{ADC} svolge un calcolo di questo tipo:
+
+    \begin{equation}
+      V_i' = k * \frac {V_i} {V_{cc}}
+    \end{equation}
+
+    \noindent dove $V_i'$ è il valore di misurato, $V_i$ è il valore vero e $k$
+    è una costante di proporzionalità. Visto che conosciamo il valore nominale
+    di $V_{ref}$, possiamo sfruttare queste informazioni per rimuovere la
+    dipendenza da $V_{cc}$. Per ogni misura $I_i$ di intensità, misuriamo sia
+    il potenziale del sensore $V_{temt}$ che il potenziale di riferimento $V_{ref}$.
+    I valori $V_{temt}'$ e $V_{ref}'$ che otterremo saranno dati da (??): %todo add ref
+
+    \vspace{-10mm}
+    \begin{multicols}{2}
+      \begin{equation}
+        V_{ref}' = k * \frac {V_{ref}} {V_{cc}}
+      \end{equation}
+    \break
+      \begin{equation}
+        V_{temt}' = k * \frac {V_{temt}} {V_{cc}}
+      \end{equation}
+    \end{multicols}
+
+    \noindent Dividento la (ref) per la (ref) troviamo il valore vero cercato $V_{temt}$.%todo add ref
+    La formula finale è quindi (riportata con gli errori già calcolati):
 
     % fixme questa formula è da sistemare. Il fatto è che in realtà v_temt non è
     %  espresso in volt, ma in LSB. (Intrinsecamente, dentro di lui compare di
     %  nuovo V_cc, quindi i due si semplificano.
     \begin{equation}
-      I_i = k \frac {
-        V_{cc} (\pm 2LSB) \cdot V_{temt} (\pm 2LSB)
-      } {
+      V_{temt} = \frac {
         V_{ref} (\pm 0.4\%)
-      }\label{eq:misura-intensità}
+      } {
+        V'_{ref} (\pm 0.2\%)
+      } V'_{temt} (\pm 0.2\%)
+      \label{eq:misura-intensità}
     \end{equation}
 
-    \noindent con $k$ costante di proporzionalità, scelta come % todo spiega come mai. Il concetto è che basta sapere che V_ref sia fisso. 1.1V è il valore nominale, l'offset a noi non importa.
-    $k = \frac {1.1} {1000 \cdot 5} (LSB \cdot V^{-1})$ in modo da ottenere
-    un intervallo di valori in uscita $0 \leq I_i < 1024$ (corrispondente
-    all'intervallo di \emph{output} originale, senza correzione).
-    In questa formula compaiono tre diverse componenti fisiche sorgenti di errore.
-    L'\emph{ADC} di \emph{ATmega328P} e il potenziale di riferimento $V_{ref}$
-    di \emph{Arduino Uno} sono le principali;
-    abbiamo considerato trascurabile l’incertezza strumentale del sensore, dato
-    che non è riportata nel \emph{datasheet} e %todo add reference to datasheet
-    qualsiasi suo effetto sarà incluso
-    nelle incertezze casuali stimate in (vedi sezione 6.2). %todo add reference to section
+    \noindent In realtà nella nostra implementazione il valore di $V_{temt}$ è
+    moltiplicato per una costante $k = (1024 \cdot 5)^{-1 V^{-1}}$, in modo
+    da ottenere un intervallo di valori in uscita compreso in un range tra $0$ e
+    $1000$. % fixme ok questo continua ad essere sus. Però almeno non influenza l'errore yee
 
+    In questa formula compaiono quindi due diverse sorgenti di errore:
+    l'\emph{ADC} di \emph{ATmega328P} e il potenziale di riferimento $V_{ref}$
+    di \emph{Arduino Uno}.
+    % Questo magari va messo in una nota?
+    %abbiamo considerato trascurabile l’incertezza strumentale del sensore, dato
+    %che non è riportata nel \emph{datasheet} e %todo add reference to datasheet
+    %qualsiasi suo effetto sarà incluso
+    %nelle incertezze casuali stimate in (vedi sezione 6.2). %todo add reference to section
     Abbiamo ottenuto l’incertezza dell’\emph{ADC} direttamente dal
     \emph{datasheet} di \emph{ATmega328P} (sezione 23.1 ADC  Features): % todo add reference
-    il produttore indica un'incertezza massima assoluta di $\pm 2LSB$. % todo add note for LSB
+    il produttore indica un'incertezza massima assoluta di $\pm 2LSB \approx 0.2\%$. % todo add note for LSB
     Questo valore tiene conto di tutte le possibili fonti di errore interne
     all’\emph{ADC} ed è da considerarsi come limite superiore.
     Per quanto riguarda l'incertezza del potenziale di riferimento, abbiamo
-    utilizzato il lavoro di Main[ref], dove ha misurato un errore %todo add reference
+    utilizzato il lavoro di Main[ref], dove è stato misurato un errore %todo add reference
     massimo dello $0.4\%$.
-    Propagando gli errori nella formula (??) abbiamo ottenuto un incertezza di % add referenceee
-    (??)
+    Propagando linearmente le incertezze nella formula (??) si ottiene un incertezza
+    strumentale dello $0.8\%$ nelle misure di intensità.
 
   \subsection{Calcolo incertezza casuale}\label{subsec:calcolo-incertezza-casuale}
     A causa di limitazioni strumentali, non ci è stato possibile ottenere un campione
-    significativo di misure di intensità per ogni angolo. Possiamo comunque ottenere
-    una stima delle incertezze casuali facendo una semplice assunzione: osserviamo che
-    tra un angolo e un altro, il nostro apparato sperimentale non cambia; di conseguenza,
-    se potessimo prendere un numero molto grande di misure per ogni valore di theta,
-    ci aspetteremmo di ottenere una serie di distribuzioni di intensità $I_\theta$
-    che differiscono solo per il valore medio, ma non per la deviazione standard.
-    Per stimare questa deviazione standard, quindi, abbiamo calcolato la semmidispersione
-    massima (miglior stima di deviazione standard per poche misure) per tutte le serie
-    di misure fatte sullo stesso angolo, e come sigma abbiamo preso la media di queste.
+    numeroso di misure per ogni angolo. Possiamo ottenere ugualmente
+    una stima delle incertezze casuali facendo le assunzioni: % fixme no fare pls
+    - Le misure di intensità sono distribuite in modo normale attorno a un valore
+      medio $\mu_i$, proprio di ogni angolo.
+    - Tra un angolo e un altro la distribuzione differisce solo per la media e non per la
+      deviazione standard $\sigma$.
+    Queste sono giustificate dal fatto che il modo in cui vengono raccolti i dati
+    non è dipendente dall'angolo a cui si trova il sensore.
+    Di conseguenza, possiamo ottenere una stima di $\sigma$ tenendo in considerazione
+    gli scarti quadratici dei campioni di ogni angolo, unitamente.
+    Abbiamo usato la formula:
 
+    \begin{equation}
+      \sigma = \sqrt{
+        \frac {
+          \sum_{i = \theta_{min}}^{\theta_{max}} \left(
+            \sum_{j = 0}^{N_i} (x_{ij} -\mu_i)^2
+          \right)
+        } {
+          \nu
+        }
+      }
+    \end{equation}
+
+    \noindent dove $N_i$ è il numero di dati nel campione $\vec{x}_i$.
+    $\nu$ è il numero di gradi di libertà dei dati, calcolato come
+    $(n^\circ \text{ dati raccolti}) - (n^\circ \text{ parametri calcolati dai dati})$.
+    Il risultato ottenuto è $\sigma = 9.46 (\text{unità arbitrarie})$.  % noi interessano le fluttuazioni
+                                                                        % statistiche, quindi questa roba non viene
+                                                                        % divisa per sqrt(n). Se ci interessasse la
+                                                                        % singola misura, dovremmo
+                                                                        % dividere.
+    % btw qui ci sarebbe da dividere per sqrt(2), visto che ho preso 2 punti per ogni angolo.
 \end{document}
 
 %In this document somasdmeters
