--- a/docs/report/fresnelReportRefs.bib
+++ b/docs/report/fresnelReportRefs.bib
@@ -4,3 +4,12 @@
    year =      {1998},
    edition =   {2nd},
 }
+
+@book{lipson20,
+   title =     {Optics Experiments and Demonstrations for Student Laboratories: Principles, methods and applications},
+   author =    {Stephen G. Lipson},
+   publisher = {IOP Publishing},
+   isbn =      {0750322985,9780750322980},
+   year =      {2020},
+   series =    {IOP Series in Emerging Technologies in Optics and Photonics},
+}
