--- a/docs/report/sections/03-apparato-e-svolgimento.tex
+++ b/docs/report/sections/03-apparato-e-svolgimento.tex
@@ -1,21 +1,20 @@
 \subsection{Apparato sperimentale}\label{subsec:apparato-sperimentale}
-  L’apparato sperimentale, riportato in [fig.1] è formato da un prisma
-  posizionato al centro di una guida circolare graduata. Il prisma è montato
-  ad un servomotore (??? modello) che gli permette di ruotare con una
-  risoluzione angolare di 1.0° +/- 0.5°. (todo: il goniometro ha permesso di
-  misurare l’angolo iniziale da cui far partire l’acquisizione). Un laser è
-  puntato verso il cristallo, e due filtri polarizzatori sono posti in mezzo
-  al fascio. Alla guida rotante è collegato un sensore di intensità luminosa
-  (??? Modello).
-  Il servo ed il sensore sono collegati a (?? mettere davvero tutto il setup
-  oppure solamente una roba) una scheda arduino, che si occupa dell’acquisizione
-  dei dati.
-  (todo inserisci numeri della roba)
+  L’apparato sperimentale è riportato in Fig.\ref{fig:apparato-strumentale}.
+  Un prisma(5) di vetro è posizionato all centro di una guida circolare graduata(4),
+  montato ad un servomotore \emph{SM-S2309S}\footnote{http://descargas.cetronic.es/microservo.pdf}.
+  Un laser(1) a luce rossa e due filtri polaroid(2, 3) sono
+  allineati con il prisma. Un sensore di intensità luminosa(6) \emph{TEMT6000}\footnote{https://www.sparkfun.com/datasheets/Sensors/Imaging/TEMT6000.pdf},
+  collegato ad un microcontrollore(7) \emph{Arduino Uno (ATmega328)}\footnote{http://store.arduino.cc/products/arduino-uno-rev3}
+  \footnote{Da qui in avanti, si userà il nome abbreviato \emph{Arduino} per riferirsi al microcontrollore.}
+  è libero di ruotare lungo la guida.
+  Il circuito che collega \emph{Arduino} e sensore è schematizzato in Fig.\ref{fig:diagramma-circuito}.
 
-  Todo add specifiche di tutta la roba e link to datasheet.
-  ADC arduino, reference voltage e cazzate varie
-  Considerazioni su come l’errore sul sensore sia determinato principalmente da difficoltà nell’allineamento e da fluttuazioni del laser.
-
+  Il servomotore permette di ruotare il prisma con una risoluzione angolare di 1.0° +/- 0.5°.
+  L'apparato Arduino-sensore fornisce una misura dell'intensità luminosa
+  sulla superficie del sensore nell'intervallo $I = [0, 1000]$ unità arbitrarie,
+  con un incertezza dello $0.8\%$ (si rimanda a Sez.\ref{subsec:calcolo-incertezza-strumentale}
+  per la dimostrazione di come è stato ottenuto questo valore).
+%
   \begin{figure}[h]
     \centering
     \caption{Apparato sperimentale e schema circuitale.}
@@ -28,35 +27,66 @@
           prisma(5), sensore(6), Arduino(7). Il servomotore non è riportato.
         }
       }
-      \label{fig:instrumental-apparatus}
+      \label{fig:apparato-strumentale}
     \end{subfigure}%
     \hspace{20mm}
     \begin{subfigure}{.4\textwidth}
       \includegraphics[width=7cm]{circuit-diagram.png}
       \caption{
         \emph{
-          Schema circuitale. I pin $VCC$ e $GND$ del sensore sono collegati
-          all'alimentazione di Arduino. Il pin $SIG$
+          Schema circuitale. I pin $\text{VCC}$ e $\text{GND}$ del sensore sono collegati
+          all'alimentazione di Arduino. Il pin $\text{SIG}$
           del sensore è collegato ad un input analogico di Arduino, tramite una
           resistenza da $10k\Omega$.
         }
       }
-      \label{fig:circuit-diagram}
+      \label{fig:diagramma-circuito}
     \end{subfigure}
   \end{figure}
-
+%
 \subsection{Procedura sperimentale}\label{subsec:procedura-sperimentale}
-  Abbiamo iniziato misurando l’andamento del coefficiente $R_\pi$. Partiamo posizionando il secondo polaroid in modo che la polarizzazione della luce sia parallela al lato del prisma. Il laser che abbiamo utilizzato emetteva luce polarizzata, quindi abbiamo dovuto aggiustare anche il suo angolo rispetto al polaroid. Prima di iniziare le misure, abbiamo regolato l’intensità del laser in modo che il sensore potesse rilevare un range di valori il più ampio possibile. Abbiamo quindi posizionato il sensore direttamente davanti al laser e abbiamo ruotato il primo filtro polaroid, fino a che il sensore non è riuscito a rilevare una variazione significativa di intensità.
-  Per prendere le misure, abbiamo iniziato ruotando il prisma in modo da massimizzare $\theta_i$. Per raccogliere un
-  punto dati abbiamo allineato il sensore con il fascio laser riflesso e ne abbiamo misurato l’intensità. Abbiamo
-  ripetuto questa misura riducendo man mano il valore di $\theta_i$, fino ad arrivare il più vicino possibile a $0\deg$.
-  Il nostro apparato sperimentale ci ha permesso di svolgere misure per ?? < $\theta_i$ < ??.
-  Abbiamo poi ruotato il secondo polaroid di 90° e ripetuta la stessa procedura per misurare $R_\sigma$.
-  In questo modo, abbiamo ottenuto le misure di intensità riflessa $I_\pi$ e $I_\sigma$ [fig ??]. Per ottenere i
-  coefficienti di Fresnel, abbiamo normalizzato i dati ottenuti tenendo conto che:
-  there is no difference between Rp and Rs at normal incidence
-  at glancing angle in the less-dense medium the reflection coefficients are ±1,
-  Come descritto in [Lipson]
-  Da queste misure abbiamo ricavato anche l’angolo di Brewster, osservando per quale valore di $\theta_i$
-  l’intensità $I_\pi$ si annulla.
+  Abbiamo seguito la procedura sperimentale riportata di seguito, ripetuta due
+  volte (così come indicato nel punto 5): una per raccogliere i dati relativi a $R_\pi$ e una per i dati relativi
+  a $R_\sigma$.
+  \begin{enumerate}
+    \item%
+      Abbiamo iniziato posizionando il polaroid(3) in modo che la polarizzazione del
+      fascio laser fosse parallela al lato del prisma, e abbiamo aggiustato l'angolo
+      del laser rispetto al polaroid(3), in modo da evitare che il fascio
+      polarizzato uscente dal laser venisse bloccato dal polaroid(3).
+    \item%
+      Abbiamo posizionato il sensore e il prisma in modo da rendere
+      massimo l'angolo $\theta_i$, con il vincolo che
+      tutto il fascio laser fosse contenuto sulla superficie del prisma(5)\footnote{Per $\theta_i \to 90^\circ$, la
+      proiezione del fascio laser sul prisma è un ellisse di semiasse maggiore $a \to +\infty$. Chiaramente, non appena
+      $a$ supera la lunghezza del lato del prisma, le equazioni \eqref{eq:fresnel-eq-p} e \eqref{eq:fresnel-eq-s} perdono
+      la loro validità.}
+    \item%
+      Ruotando il polaroid(2), abbiamo ridotto l’intensità del fascio laser
+      incidente al prisma, fino a che Arduino non ha potuto rilevare una
+      variazione significativa del segnale del sensore.
+      Questo ci ha permesso di sfruttare l'intero range di operatività di Arduino.
+    \item%
+      Abbiamo raccolto l'intensità luminosa letta dal sensore in questo punto,
+      poi abbiamo ruotato il prisma di $2^\circ$ in senso orario e abbiamo
+      allineato il sensore di conseguenza.
+    \item%
+      Abbiamo ripetuto il passo precedente fino a raggiungere un valore di $\theta_i$
+      il più possibile vicino a zero
+    \item%
+      abbiamo ruotato di $90^\circ$ il polaroid(3) e ripetuto l'intera
+      procedura un'altra volta.
+  \end{enumerate}
+
+  Nel nostro caso, siamo riusciti a misurare valori nell'intervallo di ${\theta_{min} \leq \theta \leq \theta_{max}}$,
+  con ${\theta_{min}=??}$ e ${\theta_{max}=??}$ % todo add valori
+  Le dimensioni del lato del prisma utilizzato ($15mm$ di lunghezza) non permettevano
+  di andare oltre $\theta_{max}$ senza che il fascio venisse alterato, mentre il
+  limite di $\theta_{min}$ ci è stato imposto dalla geometria del sensore.
+  Abbiamo scelto un passo angolare di $2^\circ$ per permetterci di prendere un
+  numero adeguato di misure, senza allungare eccessivamente la durata dell'esperimento.
+  Per concludere questa sezione, ricordiamo che i dati raccolti \emph{non} sono
+  i coefficienti $R_\pi$ e $R_\sigma$, ma differiscono da essi per una costante
+  moltiplicativa che verrà rimossa in Sez.$\ref{subsec:analisi-dati}$.
 \endinput
+
