--- a/docs/report/sections/04-risultati.tex
+++ b/docs/report/sections/04-risultati.tex
@@ -7,7 +7,34 @@
   Da queste misure abbiamo ricavato anche l’angolo di Brewster, osservando per quale valore di $\theta_i$
   l’intensità $I_\pi$ si annulla.
   %TODO
+
+  \begin{figure}[h]
+    \centering
+    \caption{Sburino}
+    \begin{subfigure}{.4\textwidth}
+      \includegraphics[width=7cm]{./graphs/raw-pi.png}
+      \caption{
+        \emph{
+          sbüro
+        }
+      }
+      \label{fig:raw-pi}
+    \end{subfigure}%
+    \hspace{20mm}
+    \begin{subfigure}{.4\textwidth}
+      \includegraphics[width=7cm]{./graphs/raw-sigma.png}
+      \caption{
+        \emph{
+          sbruña
+        }
+      }
+      \label{fig:raw-sigma}
+    \end{subfigure}
+  \end{figure}
 \subsection{Misura dell'angolo di Brewster}\label{subsec:angolo-di-brewster}
   \blindtext[2]
   % TODO
 \endinput
+
+
+
