--- a/docs/report/sections/04-risultati.tex
+++ b/docs/report/sections/04-risultati.tex
@@ -31,8 +31,46 @@
       \label{fig:raw-sigma}
     \end{subfigure}
   \end{figure}
+  %
+  bla bla bla dopo questo abbiamo normalizzato i dati bla bla bla
+  Donec ullamcorper, felis non sodales commodo, lectus velit ultricesaugue,adignissimnibhlectusplaceratpede. Vivamusnuncnunc,molestieut,ultriciesvel,semperin,velit. Ut porttitor. Praesent in sapien. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Duisfringilla tristique neque. Sed interdum libero ut metus. Pellente
+  %
+  \begin{figure}[h]
+    \centering
+    \caption{Smegma}
+    \begin{subfigure}{.4\textwidth}
+      \includegraphics[width=7cm]{./graphs/normalised-coefficients.png}
+      \caption{
+        \emph{
+          spregna
+        }
+      }
+      \label{fig:normalised-coefficients}
+    \end{subfigure}%
+    \hspace{20mm}
+    \begin{subfigure}{.4\textwidth}
+      \includegraphics[width=7cm]{./graphs/amplitude-coefficients.png}
+      \caption{
+        \emph{
+          bora
+        }
+      }
+      \label{fig:raw-sigma}
+    \end{subfigure}
+  \end{figure}
+  sì ceh insomma ok la roba fitta kek siamo molto bravi
+
+
 \subsection{Misura dell'angolo di Brewster}\label{subsec:angolo-di-brewster}
-  \blindtext[2]
+  \blindtext[1]
+  ciao
+  %
+  \begin{figure}[h]
+    \centering
+    \caption{brema}
+    \includegraphics[width=7cm]{./graphs/brewsters-angle.png}
+    \label{fig:brewsters-angel}
+  \end{figure}
   % TODO
 \endinput
 
