--- a/docs/report/report.tex
+++ b/docs/report/report.tex
@@ -13,6 +13,7 @@
 \usepackage{amsmath}
 \usepackage{subcaption}
 \usepackage[hang,flushmargin]{footmisc} % remove indent in footnote. % fixme maybe this
+\usepackage{float}
 
 \raggedbottom
 
